--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "mix": "^0.0.1"
+        "mix": "^0.0.1",
+        "react-icons": "^5.4.0"
     }
 }
